--- a/Sofware Otimar SAS/index.html
+++ b/Sofware Otimar SAS/index.html
@@ -36,7 +36,7 @@
             <li class="nav-item"> <a href="#">Inicio</a></li>
             <li class="nav-item"> <a href="#">Reserva tu vuelo</a></li>
             <li class="nav-item"> <a href="#">Mis viajes</a></li>
-            <li class="nav-item"> <a href="indextarapaca.html">Blog</a></li>
+            <li class="nav-item"> <a href="indextarapaca.html">Blogs</a></li>
             <li class="nav-item"> <a href="#">Contacto</a></li>
             <li class="nav-item"> <a href="Formlogin.html">Ingresa</a></li>
             <li class="nav-item"> <a href="Formularioinicio.html">Registrate</a></li>
