--- a/Sofware Otimar SAS/indextarapaca.html
+++ b/Sofware Otimar SAS/indextarapaca.html
@@ -25,10 +25,10 @@
             <li class="nav-item"> <a href="index.html">Inicio</a></li>
             <li class="nav-item"> <a href="#">Reserva tu vuelo</a></li>
             <li class="nav-item"> <a href="#">Mis viajes</a></li>
-            <li class="nav-item"> <a href="#">Blog</a></li>
+            <li class="nav-item"> <a href="#">Blogs</a></li>
             <li class="nav-item"> <a href="#">Contacto</a></li>
-            <li class="nav-item"> <a Formlogin.html="#">Ingresa</a></li>
-            <li class="nav-item"> <a href="#">Registrate</a></li>
+            <li class="nav-item"> <a href="Formlogin.html">Ingresa</a></li>
+            <li class="nav-item"> <a href="Formularioinicio.html">Registrate</a></li>
         </ul>
         <div class="menu-bar">Menu
             <span class="hamburguer-icon">
