--- a/Sofware Otimar SAS/Formularioinicio.html
+++ b/Sofware Otimar SAS/Formularioinicio.html
@@ -22,7 +22,7 @@
             <h1 id="title">Bienvenido</h1> <!-- Titulo formulario -->
             <h2 id="title">Formulario de Registro</h2> <!-- Titulo formulario -->
 
-            <form action="validar.php" method="POST">
+            <form action="validar.php" method="POST" id="form">
 
                 <div class="input-group">
                     <!--casilla nombre -->
